# 2-DOF-Serial-Manipulator-angel-finder

./: .gitignore  CMakeLists.txt  README.md
engine/datatypes/: anglePair.h  vector2.h
engine/geometricSolver/: geometricSolver.c
src/: source.c
src/datatypes/: angle.h
src/geometricSolver/: geometricSolver.h
tests/: run_ui.py
